--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,13 +1,28 @@
 <form action="/auth/signup" method="POST">
-   <label> Username
+   <label> Name
       <input type="text" name="username">
+   </label>
+   <label> Username
+      <input type="password" name="password">
+   </label>
+   <label> E-mail
+      <input type="password" name="password">
    </label>
    <label> Password
       <input type="password" name="password">
    </label>
 
+   <label> Friend Code
+      <input type="password" name="password">
+   </label>
+
+   <p>What's your undertone?</p>
+   <input type="radio" id="tone1" name="cool">
+   <label for="tone1">Cool Tone</label><br>
+   <input type="radio" id="tone2" name="neutral">
+   <label for="tone2">Neutral Tone</label><br>
+   <input type="radio" id="tone3" name="warm">
+   <label for="age3">Warm Tone</label><br><br>
+
    <button type="submit">Submit</button>
 </form>
-
-
-   
