routes partial fix

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,9 +2,9 @@
 <p>Welcome Ironhacker!</p>
 <h4>Callie</h4>
 
-<a href="/views/about.hbs"> About Us</a>
+<a href="/views/about"> About Us</a>
 
-<a href="/views/rankings.hbs"> Rankings</a>
+<a href="/views/rankings"> Rankings</a>
 
 <a href="/auth/signup"> Sign-Up</a>
 
