routes finally work

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,9 +2,9 @@
 <p>Welcome Ironhacker!</p>
 
 
-<a href="/views/about"> About Us</a>
+<a href="/about"> About Us</a>
 
-<a href="/views/rankings"> Rankings</a>
+<a href="/rankings"> Rankings</a>
 
 <a href="/auth/signup"> Sign-Up</a>
 
