--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,5 +1,5 @@
 <div class="about-section">
-  <h1>About Us Page</h1>
+  <h1 style= "text-align: center;">About Us</h1>
   <p>We are a group of women students in the Ironhack Web Development course. For our proejct #2, we decided to create a makeup up app from scratch. </p>
   <p>It took a lot of hard work and commnuication, but we had a lot fun and liked what we created.</p>
 </div>
@@ -10,7 +10,7 @@
     <div class="card">
       <img src="" alt="" style="width:100%">
       <div class="container">
-        <h2>Callie Dolles</h2>
+        <h3>Callie Doles</h3>
         <p class="title">Web Development Coder</p>
         <p>Hey, I'm Callie! I’m from Gainesville. I’m middle child of 7. My favorite color is blue.</p>
         <p>capgirltbbb@yahoo.com</p>
@@ -23,7 +23,7 @@
     <div class="card">
       <img src="" alt="" style="width:100%">
       <div class="container">
-        <h2>Rebecca Sundel</h2>
+        <h3>Rebecca Sundel</h3>
         <p class="title">Web Development Coder</p>
         <p>Hi, I'm Rebecca!  I am 22 years old.  I am from Washington, D.C. I am new to web development, but I like it a lot so far!</p>
         <p>sundelrp@gmail.com</p>
@@ -36,7 +36,7 @@
     <div class="card">
       <img src="" alt="" style="width:100%">
       <div class="container">
-        <h2>Dria Thomas</h2>
+        <h3>Dria Thomas</h3>
         <p class="title">Web Development Coder</p>
         <p>Hello, I'm Dria! I'm from West Palm, Florida.  I am into web development.</p>
         <p>driathomas96@gmail.com</p>
