--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,12 @@
+<a href="/about"> About Us</a>
+
+<a href="/auth/signup"> Sign-Up</a>
+<a href="/auth/login"> Login</a>
+
+<a href="/rankings"> Rankings</a>
+<a href="/user/profile">Profile Page</a>
+
 <h1>{{title}} 🚀</h1>
 <p>Welcome Ironhacker!</p>
 
 
-<a href="/about"> About Us</a>
-
-<a href="/rankings"> Rankings</a>
-
-<a href="/auth/signup"> Sign-Up</a>
-
-<a href="/auth/login"> Login</a>
