--- a/views/auth/logout.hbs
+++ b/views/auth/logout.hbs
@@ -1,3 +1,12 @@
+<form action="/auth/logout" method="POST">
+   <label> Username
+      <input type="text" name="username">
+   </label>
+   <label> Password
+      <input type="password" name="password">
+   </label>
 
+   <button type="submit">Submit</button>
+</form>
 
     
