--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -27,6 +27,10 @@
       <button type="submit" class="signupbtn">Sign Up</button>
     </div>
   </div>
+  <p class="account-message">
+  Do you already have an account?
+  <a href="/login">Login</a>
+ </p>
 </form> --}}
 
 
