--- a/views/edit-product-list.hbs
+++ b/views/edit-product-list.hbs
@@ -8,7 +8,7 @@
 
                 <hr>
 
-                <form action="/product/edit/{{product.id}}" method="post">
+                <form action="/edit-product-list/{{product.id}}" method="post">
                     <label>
                         Name: <input type="text" name="name" value="{{product.name}}">
                     </label>
