--- a/views/rankings.hbs
+++ b/views/rankings.hbs
@@ -95,7 +95,7 @@
         <p id="product-description-fav"></p>
         <p id="price-fav"></p>
 
-        <form action="/edit/{{product.id}}" id="create-product-list" method="POST">
+        <form action="/edit-product-list/{{product.id}}" id="create-product-list" method="POST">
             <input type="text" id="brand-form" name="brand" placeholder="brand" />
             <input type="name" name="name" placeholder="name" />
             <input type="text" name="description" placeholder="description" />
