--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -58,5 +58,13 @@
   </form>
 </div>
 
+<p>What's your undertone?</p>
+<input type="radio" id="tone1" name="cool">
+<label for="tone1">Cool Tone</label><br>
+<input type="radio" id="tone2" name="neutral">
+<label for="tone2">Neutral Tone</label><br>
+<input type="radio" id="tone3" name="warm">
+<label for="age3">Warm Tone</label><br><br>
 
-   
+<button type="submit">Submit</button>
+</form>
