--- a/views/rankings.hbs
+++ b/views/rankings.hbs
@@ -1,5 +1,122 @@
 <h1>What's The Favorite?</h1>
 
-<div class = "query-results-container">
-    
+<div class="query-results-container">
+
+    <h1>Products</h1>
+
+
+    <div>
+        <input id="product-name-input" type="text" />
+        <button id="get-product-btn">Search</button>
+    </div>
+    <div>
+        <h1 id="product-brand"></h1>
+        <h2 id="product-name"></h2>
+        <p id="product-description"></p>
+        <p id="price"></p>
+        <button id="add-favorites-button">Add Favorites</button>
+    </div>
+    <div>
+        <img id="image_link" src="" height="200px" />
+    </div>
+
+
+    <div>
+        <h1 id="product-brand1"></h1>
+        <h2 id="product-name1"></h2>
+        <p id="product-description1"></p>
+        <p id="price1"></p>
+        <button id="add-favorites-button1">Add Favorites</button>
+    </div>
+    <div>
+        <img id="image_link1" src="" height="200px" />
+    </div>
+
+
+
+    <div>
+        <h1 id="product-brand2"></h1>
+        <h2 id="product-name2"></h2>
+        <p id="product-description2"></p>
+        <p id="price2"></p>
+        <button id="add-favorites-button2">Add Favorites</button>
+    </div>
+    <div>
+        <img id="image_link2" src="" height="200px" />
+
+
+
+    </div>
+
+
+    <div>
+        <h1 id="product-brand3"></h1>
+        <h2 id="product-name3"></h2>
+        <p id="product-description3"></p>
+        <p id="price3"></p>
+    </div>
+    <div>
+        <img id="image_link3" src="" height="200px" />
+        <button id="add-favorites-button3">Add Favorites</button>
+    </div>
+
+    <div>
+
+        <h1 id="product-brand4"></h1>
+        <h2 id="product-name4"></h2>
+        <p id="product-description4"></p>
+        <p id="price4"></p>
+        <button id="add-favorites-button4">Add Favorites</button>
+    </div>
+    <div>
+        <img id="image_link4" src="" height="200px" />
+
+    </div>
+
+    <div>
+        <h1>Favorites Added</h1>
+        <p id="num-fav"></p>
+        <p id="num-fav1"></p>
+        <p id="num-fav2"></p>
+        <p id="num-fav3"></p>
+        <p id="num-fav4"></p>
+
+
+    </div>
+
+
+
+
+
+    <div id="favorite-list">
+        <h1>CREATE FAVORITES</h1>
+        <h1 id="product-brand-fav"></h1>
+        <h2 id="product-name-fav"></h2>
+        <p id="product-description-fav"></p>
+        <p id="price-fav"></p>
+
+        <form action="/edit-product-list/{{product.id}}" id="create-product-list" method="POST">
+            <input type="text" id="brand-form" name="brand" placeholder="brand" />
+            <input type="name" name="name" placeholder="name" />
+            <input type="text" name="description" placeholder="description" />
+            {{!-- <input type="radio" name="undertone" placeholder="undertone" /> --}}
+            <p>Recommended Undertone:</p>
+            <input type="radio" id="cool" name="cool" value="{{product.tones}}">
+            <label for="cool">Cool</label><br>
+            <input type="radio" id="neutral" name="neutral" value="neutral">
+            <label for="neutral">Neutral</label><br>
+            <input type="radio" id="warm" name="warm" value="warm">
+            <label for="warm">Warm</label><br>
+
+            <button type="submit" id="createitem">Add</button>
+        </form>
+
+
+    </div>
+
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    <script src="/js/script.js"></script>
+
 </div>
