--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,3 +10,10 @@
 <p>Welcome Ironhacker!</p>
 
 
+<a href="/auth/login"> Login</a>
+
+<a href="/rankings/list"> Fav List </a>
+
+
+<a href="/rankings/edit/{{id}}">Edit</a>
+<a href="/rankings/delete/{{id}}">Delete</a>
