--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -47,6 +47,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>{{siteTitle}}</title>
+   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css'>
    {{!--
    <link rel='stylesheet' href="/css/style.css" /> --}}
@@ -67,9 +68,15 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav ml-auto">
             <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="product/list">Product ilst</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="/product/create">Create list</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/rankings">Product search</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/create">Create list</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/about">About Us</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/rankings/edit/:id">Edit</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="rankings/delete/:id">Delete</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/rankings/edit/{{id}}">Edit</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/rankings/delete/{{id}}">Delete</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/rankings/create/">Ranking Products</a> </li>
+
 
          </ul>
       </div>
