--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -47,10 +47,10 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>{{siteTitle}}</title>
-   <<<<<<< HEAD <script src="https://unpkg.com/axios/dist/axios.min.js">
+   <script src="https://unpkg.com/axios/dist/axios.min.js">
       </script>
-      =======
-      >>>>>>> 5de1ee95e570f249378ad5ca351a5aaeb6002423
+
+      
       <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css'>
       {{!--
       <link rel='stylesheet' href="/css/style.css" /> --}}
