--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,5 +12,5 @@
 
 <a href="/auth/login"> Login</a>
 
-<a href="/rankings/list"> Fav List </a>
-
+<a href="/product"> Products </a>
+<a href="/collection/create"> Create Collection </a>
