--- a/views/rankings.hbs
+++ b/views/rankings.hbs
@@ -14,11 +14,11 @@
         <h2 id="product-name"></h2>
         <p id="product-description"></p>
         <p id="price"></p>
-        <<<<<<< HEAD <a href="/rankings/create/" class="btn btn-success">Add Favorite</a>
-            {{!-- <button id="add-favorites-button">Add Favorites</button> --}}
-            =======
-            <button id="add-favorites-button">Add Favorites</button>
-            >>>>>>> 5de1ee95e570f249378ad5ca351a5aaeb6002423
+        <a href="/rankings/create/" class="btn btn-success">Add Favorite</a>
+        {{!-- <button id="add-favorites-button">Add Favorites</button> --}}
+
+        <button id="add-favorites-button">Add Favorites</button>
+
     </div>
     <div>
         <img id="image_link" src="" height="200px" />
@@ -30,11 +30,11 @@
         <h2 id="product-name1"></h2>
         <p id="product-description1"></p>
         <p id="price1"></p>
-        <<<<<<< HEAD {{!-- <button id="add-favorites-button1">Add Favorites</button> --}}
-            <a href="/rankings/create/{{id}}" class="btn btn-success">Add Favorite</a>
-            =======
-            <button id="add-favorites-button1">Add Favorites</button>
-            >>>>>>> 5de1ee95e570f249378ad5ca351a5aaeb6002423
+        {{!-- <button id="add-favorites-button1">Add Favorites</button> --}}
+        <a href="/rankings/create/{{id}}" class="btn btn-success">Add Favorite</a>
+        =======
+        <button id="add-favorites-button1">Add Favorites</button>
+
     </div>
     <div>
         <img id="image_link1" src="" height="200px" />
