about page style with pictures

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -8,7 +8,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="" alt="" style="width:100%">
+      <img src="/public/images/callie.png" alt="callie" style="width:100%">
       <div class="container">
         <h3>Callie Doles</h3>
         <p class="title">Web Development Coder</p>
@@ -21,7 +21,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="" alt="" style="width:100%">
+      <img src="/public/images/rebecca.jpg" alt="rebecca" style="width:100%">
       <div class="container">
         <h3>Rebecca Sundel</h3>
         <p class="title">Web Development Coder</p>
