about us more fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,15 @@ nav {
 }
 
 about-section {
-  body {
+
+  padding: 50px;
+  text-align: center;
+  background-color: #474e5d;
+  color: white;
+
+}
+  
+  p {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
   }
@@ -30,13 +38,6 @@ about-section {
   .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     margin: 8px;
-  }
-  
-  .about-section {
-    padding: 50px;
-    text-align: center;
-    background-color: #474e5d;
-    color: white;
   }
   
   .container {
