--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,12 +9,18 @@
 <h1>{{title}} 🚀</h1>
 <p>Welcome Ironhacker!</p>
 
+<style>
+body {
+  background-image: url('makeupcollage.jpg');
+}
+</style>
+
 
 <a href="/auth/login"> Login</a>
 
 <a href="/rankings/list"> Fav List </a>
 
-
+{{!-- 
 <a href="/rankings/edit/{{id}}">Edit</a>
-<a href="/rankings/delete/{{id}}">Delete</a>
+<a href="/rankings/delete/{{id}}">Delete</a> --}}
 
