index in progress

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,14 @@
+<style>
+body {
+  background-image: url('makeupcollage.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
+
+
+
 <a href="/about"> About Us</a>
 
 <a href="/auth/signup"> Sign-Up</a>
@@ -9,11 +20,6 @@
 <h1>{{title}} 🚀</h1>
 <p>Welcome Ironhacker!</p>
 
-<style>
-body {
-  background-image: url('makeupcollage.jpg');
-}
-</style>
 
 
 <a href="/auth/login"> Login</a>
