index hbs work inprogress

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,9 @@
+<div class="index">
+    <h1>{{title}} 🚀</h1>
+<p>Welcome Ironhacker!</p>
+</div>
+
+
 <style>
 body {
   background-image: url('makeupcollage.jpg');
@@ -7,7 +13,7 @@ body {
 }
 </style>
 
-
+<h1 style= "text-align: center;"></h1>
 
 <a href="/about"> About Us</a>
 
@@ -17,8 +23,8 @@ body {
 <a href="/rankings"> Rankings</a>
 <a href="/user/profile">Profile Page</a>
 
-<h1>{{title}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+{{!-- <h1>{{title}} 🚀</h1>
+<p>Welcome Ironhacker!</p> --}}
 
 
 
