finished nav bar

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -72,13 +72,9 @@
          <ul class="navbar-nav ml-auto">
             <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/rankings">Product search</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="/create">Create list</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/about">About Us</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="/rankings/edit/:id">Edit</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="rankings/delete/:id">Delete</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="/rankings/edit/{{id}}">Edit</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="/rankings/delete/{{id}}">Delete</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="/rankings/create/">Ranking Products</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/product"> All Product</a> </li>
+            <li class="nav-item"> <a href="/collection/create"> Create Collection </a> </li>
 
 
          </ul>
