--- a/views/undertone/warm.hbs
+++ b/views/undertone/warm.hbs
@@ -5,12 +5,12 @@
 
     <div class="row">
 
-        {{#each products}}
+        {{!-- {{#each posts}} --}}
         <div class="col-md-4">
             <article class="character">
-                <h2>{{products.brand}} <small>(ID {{products.id}})</small></h2>
+                <h2>{{posts.brand}} <small>(ID )</small></h2>
                 <hr>
-                <p>Name: {{products.name}}</p>
+                <p>Name: {{name}}</p>
                 <p>Weapon: {{description}}</p>
 
                 <div class="btn-group" style="width: 100%">
@@ -19,7 +19,7 @@
                 </div>
             </article>
         </div>
-        {{/each}}
+        {{!-- {{/each}} --}}
 
     </div>
 
