--- a/views/pages/list.hbs
+++ b/views/pages/list.hbs
@@ -15,13 +15,20 @@
                     <img src="{{image_link}}" width="200" height="200">
                 </div>
                 <div class="btn-group" style="width: 100%">
-                    <a href="/rankings/edit/{{id}}" class="btn btn-outline-dark btn-sm">Edit Product</a>
+                    <a href="/collection/create/{{id}}" class="btn btn-outline-dark btn-sm">Edit Product</a>
                     {{!-- <a href="/rankings/delete/{{id}}" class="btn btn-dark btn-sm">Delete Product</a> --}}
                     <a href="/rankings/create/" class="btn btn-success">Add Favorite</a>
                 </div>
             </article>
         </div>
         {{/each}}
+
+
+
+
+
+
+
 
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     </div>
