index page edit

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,6 @@
-<div class="index-selection">
-    <h1>{{title}} 🚀</h1>
-    
-<p>Welcome Ironhacker!</p>
-</div>
-
-
+<!DOCTYPE html>
+<html>
+<head>
 <style>
 body {
   background-image: url('makeupcollage.jpg');
@@ -13,6 +9,23 @@ body {
   background-size: cover;
 }
 </style>
+</head>
+
+<div class="index-selection">
+    <h1>{{title}} 🚀</h1>
+    
+<p>Welcome Ironhacker!</p>
+</div>
+
+
+{{!-- <style>
+body {
+  background-image: url('makeupcollage.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style> --}}
 
 <h1 style= "text-align: center;"></h1>
 
