--- a/views/about.hbs
+++ b/views/about.hbs
@@ -34,7 +34,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="" alt="" style="width:100%">
+      <img src="/public/images/dria.png" alt="" style="width:100%">
       <div class="container">
         <h3>Dria Thomas</h3>
         <p class="title">Web Development Coder</p>
