updated main part

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -71,8 +71,8 @@
          <ul class="navbar-nav ml-auto">
             <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/rankings">Product search</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="/create">Create list</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/about">About Us</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/product"> All Product</a> </li>
             <li class="nav-item"> <a href="/collection/create"> Create Collection </a> </li>
 
 
