--- a/views/pages/create.hbs
+++ b/views/pages/create.hbs
@@ -1,8 +1,8 @@
 <h1>Create Favorites List</h1>
 
 
-<form action="/collection/create" id="create-product-list" method="POST">
-    <input type="text" id="brand-form" name="brand" placeholder="brand" />
+<form action="/collection/create/{{makeupId}}" id="create-product-list" method="POST">
+    <input type="text" id="brand-form" name="brand" placeholder="collection" />
     <input type="name" name="name" placeholder="name" />
     <input type="text" name="description" placeholder="description" />
     {{!-- <input type="radio" name="undertone" placeholder="undertone" /> --}}
@@ -38,12 +38,13 @@
 
 
 
-{{#each posts}}
+{{#each copyOfPost}}
 <div class="col-md-4">
 
-    <h2>Name {{name}} <small> </small></h2>
+    <h2> Collection Name {{name}} <small> </small></h2>
+    <h5>Brand: {{brand}}</h5>
+    <img src="{{image_link}}">
 
-    <p>Brand: {{posts.brand}}</p>
     <p>Description: {{posts.description}}</p>
     {{!--
     <div class="btn-group" style="width: 100%">
