--- a/views/pages/list.hbs
+++ b/views/pages/list.hbs
@@ -7,9 +7,10 @@
         {{#each products}}
         <div class="col-md-4">
             <article class="product">
-                <h2>{{name}} <small>(ID {{id}})</small></h2>
+                <h2>{{name}} </h2>
                 <hr>
                 <p>Brand: {{brand}}</p>
+
                 <p>Description: {{description}}</p>
                 <div>
                     <img src="{{image_link}}" width="200" height="200">
@@ -17,7 +18,7 @@
                 <div class="btn-group" style="width: 100%">
                     <a href="/collection/create/{{id}}" class="btn btn-outline-dark btn-sm">Edit Product</a>
                     {{!-- <a href="/rankings/delete/{{id}}" class="btn btn-dark btn-sm">Delete Product</a> --}}
-                    <a href="/rankings/create/" class="btn btn-success">Add Favorite</a>
+                    <a href="/collection/create/{{id}}" class="btn btn-success">Add Favorite</a>
                 </div>
             </article>
         </div>
