--- a/views/index.hbs
+++ b/views/index.hbs
@@ -48,5 +48,9 @@ body {
 
 {{!-- 
 <a href="/rankings/edit/{{id}}">Edit</a>
+
+<a href="/rankings/delete/{{id}}">Delete</a>
+
 <a href="/rankings/delete/{{id}}">Delete</a> --}}
+
 
