--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -48,12 +48,11 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>{{siteTitle}}</title>
    <script src="https://unpkg.com/axios/dist/axios.min.js">
-      </script>
+   </script>
 
-      
-      <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css'>
-      {{!--
-      <link rel='stylesheet' href="/css/style.css" /> --}}
+   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css'>
+   {{!--
+   <link rel='stylesheet' href="/css/style.css" /> --}}
 </head>
 
 <body>
@@ -74,6 +73,8 @@
             <li class="nav-item"> <a class="nav-link" href="/rankings">Product search</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/about">About Us</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/product"> All Product</a> </li>
+            <li class="nav-item"> <a href="/collection/create"> Create Collection </a> </li>
+
             <li class="nav-item"> <a class="nav-link" href="/collection/create"> Create Collection </a> </li>
 
 
