--- a/views/pages/create.hbs
+++ b/views/pages/create.hbs
@@ -1,7 +1,9 @@
 <h1>Create Favorites List</h1>
+{{!-- "/collection/create/{{makeupId}}" --}}
 
-
-<form action="/collection/create" id="create-product-list" method="POST">
+<form action="/collection/create/" id="create-product-list" method="POST">
+    <input type="number" id="top3" name="top3" min="1" max="3">
+    <input type="collection" name="collection" placeholder="collection name" />
     <input type="text" id="brand-form" name="brand" placeholder="brand" />
     <input type="name" name="name" placeholder="name" />
     <input type="text" name="description" placeholder="description" />
@@ -16,3 +18,64 @@
 
     <button type="submit" id="createitem">Add</button>
 </form>
+
+
+
+{{!-- <div class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">Name {{name}}</h5>
+
+        <h6 class="card-subtitle mb-2 text-muted">Brand:{{brand}}</h6>
+        <p class="card-text">Description: {{description}}</p>
+        <a href="#" class="card-link">Edit</a>
+        <a href="#" class="card-link">Delete</a>
+    </div>
+</div> --}}
+
+
+
+
+<h1>Collection Posts</h1>
+<hr>
+
+<div>
+
+    {{#each cop}}
+    <div class="col-md-4">
+        {{makeupId}}
+
+        <h1>{{top3}}{{collectionName}}</h1>
+        <h2> Collection Name: {{name}} <small> </small></h2>
+        <h5>Brand: {{brand}}</h5>
+        <h5>Recommended undertone:{{undertone}}</h5>
+        <img src="{{imageUrl}}">
+
+        <p>Description: {{description}}</p>
+
+        <div class="btn-group" style="width: 100%">
+
+            {{!-- <a href="/collection/create/edit/{{_id}}" class=" btn btn-dark btn-sm">Edit</a> --}}
+            <a href="/create/{{_id}}/edit" class=" btn btn-dark btn-sm">Edit</a>
+
+            <form action="/create/{{_id}}/delete" method="POST">
+                <button>🗑 DELETE</button>
+            </form>
+        </div>
+
+
+        {{!-- /room/{{_id}}/delete --}}
+
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    </div>
+
+    {{/each}}
+
+
+
+
+
+
+
+
+</div>
