--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,6 +1,7 @@
 <div class="about-section">
-  <h1 style= "text-align: center;">About Us</h1>
-  <p>We are a group of women students in the Ironhack Web Development course. For our proejct #2, we decided to create a makeup up app from scratch. </p>
+  <h1 style="text-align: center;">About Us</h1>
+  <p>We are a group of women students in the Ironhack Web Development course. For our proejct #2, we decided to create a
+    makeup up app from scratch. </p>
   <p>It took a lot of hard work and commnuication, but we had a lot fun and liked what we created.</p>
 </div>
 
@@ -8,7 +9,8 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="/public/images/callie.png" alt="" style="width:100%">
+      <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Face_Emoji_large.png?v=1571606036" alt=""
+        style="width:100%">
       <div class="container">
         <h3>Callie Doles</h3>
         <p class="title">Web Development Coder</p>
@@ -21,11 +23,13 @@
 
   <div class="column">
     <div class="card">
-      <img src="/public/images/rebecca.jpg" alt="" style="width:100%">
+      <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Face_Emoji_large.png?v=1571606036" alt=""
+        style="width:100%">
       <div class="container">
         <h3>Rebecca Sundel</h3>
         <p class="title">Web Development Coder</p>
-        <p>Hi, I'm Rebecca!  I am 22 years old.  I am from Washington, D.C. I am new to web development, but I like it a lot so far!</p>
+        <p>Hi, I'm Rebecca! I am 22 years old. I am from Washington, D.C. I am new to web development, but I like it a
+          lot so far!</p>
         <p>sundelrp@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
@@ -34,11 +38,12 @@
 
   <div class="column">
     <div class="card">
-      <img src="/public/images/dria.png" alt="" style="width:100%">
+      <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Face_Emoji_large.png?v=1571606036" alt=""
+        style="width:100%">
       <div class="container">
         <h3>Dria Thomas</h3>
         <p class="title">Web Development Coder</p>
-        <p>Hello, I'm Dria! I'm from West Palm, Florida.  I am into web development.</p>
+        <p>Hello, I'm Dria! I'm from West Palm, Florida. I am into web development.</p>
         <p>driathomas96@gmail.com</p>
         <p><button class="button">Contact</button></p>
       </div>
