--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
 <div class="index-selection">
   <h1>{{title}} 🚀</h1>
 
-  <p>Welcome Ironhacker!</p>
+
 </div>
 
 
@@ -35,17 +35,17 @@
 <a href="/auth/signup"> Sign-Up</a>
 <a href="/auth/login"> Login</a>
 
-<a href="/rankings"> Rankings</a>
-<a href="/user/profile">Profile Page</a>
+{{!-- <a href="/rankings"> Product Search</a>
+<a href="/user/profile">Profile Page</a> --}}
 
 {{!-- <h1>{{title}} 🚀</h1>
 <p>Welcome Ironhacker!</p> --}}
 
 
 
-<a href="/auth/login"> Login</a>
+{{!-- <a href="/auth/login"> Login</a> --}}
 
-<a href="/rankings/list"> Fav List </a>
+
 
 {{!--
 <a href="/rankings/edit/{{id}}">Edit</a>
@@ -55,7 +55,9 @@
 <a href="/rankings/delete/{{id}}">Delete</a> --}}
 
 
-<a href="/auth/login"> Login</a>
+{{!-- <a href="/auth/login"> Login</a> --}}
 
-<a href="/product"> Products </a>
-<a href="/collection/create"> Create Collection </a>
+{{!-- <a href="/product"> Products List </a>
+<a href="/collection/create"> Create Collection </a> --}}
+
+<img src="https://i.pinimg.com/originals/dc/b7/b7/dcb7b77fc98b183783ed5891825d513d.jpg" alt="">
