--- a/views/rankings.hbs
+++ b/views/rankings.hbs
@@ -1,8 +1,8 @@
-<h1>What's The Favorite?</h1>
+<h1>Product Search</h1>
 
 <div class="query-results-container">
 
-    <h1>Products</h1>
+    {{!-- <h1>Products</h1> --}}
 
 
     <div>
@@ -17,7 +17,7 @@
         <h2 id="product-name">{{name}}</h2>
         <p id="product-description">{{description}}</p>
         <p id="price"></p>
-        <a href="/collection/create/{{id}}" class="btn btn-success">Add Favorite</a>
+        {{!-- <a href="/collection/create/{{id}}" class="btn btn-success">Add Favorite</a> --}}
         {{!-- <button id="add-favorites-button">Add Favorites</button> --}}
 
         {{!-- <button id="add-favorites-button">Add Favorites</button> --}}
@@ -28,15 +28,15 @@
     </div>
 
 
-    {{!-- <div>
+    <div>
         <h1 id="product-brand1"></h1>
         <h2 id="product-name1"></h2>
         <p id="product-description1"></p>
         <p id="price1"></p>
         {{!-- <button id="add-favorites-button1">Add Favorites</button> --}}
-        <a href="/rankings/create/{{id}}" class="btn btn-success">Add Favorite</a>
+        {{!-- <a href="/rankings/create/{{id}}" class="btn btn-success">Add Favorite</a> --}}
 
-        <button id="add-favorites-button1">Add Favorites</button>
+        {{!-- <button id="add-favorites-button1">Add Favorites</button> --}}
 
     </div>
     <div>
@@ -49,7 +49,7 @@
         <p id="product-description2"></p>
         <p id="price2"></p>
         {{!-- <button id="add-favorites-button2">Add Favorites</button> --}}
-        <a href="/rankings/create/{{id}}" class="btn btn-success">Add Favorite</a>
+        {{!-- <a href="/rankings/create/{{id}}" class="btn btn-success">Add Favorite</a> --}}
     </div>
     <div>
         <img id="image_link2" src="" height="200px" />
@@ -64,7 +64,7 @@
         <h2 id="product-name3"></h2>
         <p id="product-description3"></p>
         <p id="price3"></p>
-        <a href="/rankings/create/{{id}}" class="btn btn-success">Add Favorite</a>
+        {{!-- <a href="/rankings/create/{{id}}" class="btn btn-success">Add Favorite</a> --}}
         {{!-- <button id="add-favorites-button3">Add Favorites</button> --}}
     </div>
     <div>
@@ -78,14 +78,14 @@
         <h2 id="product-name4"></h2>
         <p id="product-description4"></p>
         <p id="price4"></p>
-        <a href="/rankings/create/{{id}}" class="btn btn-success">Add Favorite</a>
+        {{!-- <a href="/rankings/create/{{id}}" class="btn btn-success">Add Favorite</a> --}}
         {{!-- <button id="add-favorites-button4">Add Favorites</button> --}}
     </div>
     <div>
         <img id="image_link4" src="" height="200px" />
 
     </div>
-    --}}
+
 
 
 
