--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,4 @@
-{{!-- <form action="action_page.php" style="border:1px solid #ccc">
+<form action="action_page.php" style="border:1px solid #ccc">
   <div class="container">
     <h1>Sign Up</h1>
     <p>Please fill in this form to create an account.</p>
@@ -27,7 +27,7 @@
       <button type="submit" class="signupbtn">Sign Up</button>
     </div>
   </div>
-</form> --}}
+</form>
 
 
 
@@ -36,7 +36,7 @@
 
 {{!-- views/auth/signup.hbs --}}
 
-<div id="form">
+{{!-- <div id="form">
   <h2>Signup</h2>
   <form action="/auth/signup" method="POST">
 
@@ -68,4 +68,4 @@
 <label for="age3">Warm Tone</label><br><br>
 
 <button type="submit">Submit</button>
-</form>
+</form> --}}
