--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,7 +1,7 @@
 <h1>Create Favorites List</h1>
 <form action="/collection/create/{{makeupId}}" id="create-product-list" method="POST">
     <input type="text" id="brand-form" name="brand" placeholder="collection" />
-    <input type="name" name="name" placeholder="name" />
+    {{!-- <input type="name" name="name" placeholder="name" /> --}}
     <input type="text" name="description" placeholder="description" />
     {{!-- <input type="radio" name="undertone" placeholder="undertone" /> --}}
     <p>Recommended Undertone:</p>
