--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -70,12 +70,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav ml-auto">
             <li class="nav-item"> <a class="nav-link" href="/">Home</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/auth/signup">Sign-Up</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/auth/login">Login</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/rankings">Product search</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/about">About Us</a> </li>
             <li class="nav-item"> <a class="nav-link" href="/product"> All Product</a> </li>
-            <li class="nav-item"> <a href="/collection/create"> Create Collection </a> </li>
-
             <li class="nav-item"> <a class="nav-link" href="/collection/create"> Create Collection </a> </li>
+            <li class="nav-item"> <a class="nav-link" href="/user/profile"> Profile Page </a> </li>
 
 
          </ul>
