grabbed callie-branch

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -25,6 +25,10 @@
     <div class="clearfix">
       <button type="button" class="cancelbtn">Cancel</button>
       <button type="submit" class="signupbtn">Sign Up</button>
+       <p class="account-message">
+         Do you already have an account?
+         <a href="/login">Login</a>
+       </p>
     </div>
   </div>
 </form>
