--- a/views/index.hbs
+++ b/views/index.hbs
@@ -31,7 +31,7 @@ body, html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide">BULK BEAUTY</a>
+    <a href="/" class="w3-bar-item w3-button w3-wide">BULK BEAUTY</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
      {{!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -72,7 +72,7 @@ body, html {
     <span class="w3-jumbo w3-hide-small">Start something that matters</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
     <span class="w3-large">Stop wasting valuable time with projects that just isn't you.</span>
-    <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
+    <p><a href="/about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
   </div> 
   {{!-- <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
@@ -112,72 +112,12 @@ body, html {
   </div>
 </div>
 
-
-
-{{!-- <!DOCTYPE html>
-<html>
-
-<head>
-  <style>
-    body {
-      background-image: url('makeupcollage.jpg');
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: cover;
-    }
-  </style>
-</head>
-
-<div class="index-selection">
-  <h1>{{title}} 🚀</h1>
-
-
-</div> --}}
-
-
 {{!-- <style>
   body {
     background-image: url('makeupcollage.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: cover;
-  }
-</style> --}}
-
-{{!-- <h1 style="text-align: center;"></h1> --}}
-
-{{!-- <a href="/about"> About Us</a>
-
-<a href="/auth/signup"> Sign-Up</a>
-<a href="/auth/login"> Login</a> --}}
-
-{{!-- <a href="/rankings"> Product Search</a>
-<a href="/user/profile">Profile Page</a> --}}
-
-{{!-- <h1>{{title}} 🚀</h1>
-<p>Welcome Ironhacker!</p> --}}
-
-
-
-{{!-- <a href="/auth/login"> Login</a> --}}
-
-
-
-{{!--
-<a href="/rankings/edit/{{id}}">Edit</a>
-
-<a href="/rankings/delete/{{id}}">Delete</a>
-
-<a href="/rankings/delete/{{id}}">Delete</a> --}}
-
-
-{{!-- <a href="/auth/login"> Login</a> --}}
-
-{{!-- <a href="/product"> Products List </a>
-<a href="/collection/create"> Create Collection </a> --}}
-
-
-
+    background-size: cover; --}}
 
 
 
@@ -193,7 +133,7 @@ body, html {
 
   <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="/" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
