--- a/views/pages/create.hbs
+++ b/views/pages/create.hbs
@@ -1,7 +1,7 @@
 <h1>Create Favorites List</h1>
 {{!-- "/collection/create/{{makeupId}}" --}}
 
-<form action="/collection/create/" id="create-product-list" method="POST">
+<form action="/collection/create" id="create-product-list" method="POST">
     <input type="number" id="top3" name="top3" min="1" max="3">
     <input type="collection" name="collection" placeholder="collection name" />
     <input type="text" id="brand-form" name="brand" placeholder="brand" />
@@ -15,6 +15,14 @@
     <label for="neutral">Neutral</label><br>
     <input type="radio" id="warm" name="undertone" value="warm">
     <label for="warm">Warm</label><br>
+    {{!-- <section>
+        <h2>Upload your photo</h2>
+        <form action="/upload" method="post" enctype="multipart/form-data">
+            <input type="text" name="name" />
+            <input type="file" name="photo" />
+            <input type="submit" value="Save" />
+        </form>
+    </section> --}}
 
     <button type="submit" id="createitem">Add</button>
 </form>
@@ -42,7 +50,7 @@
 
     {{#each cop}}
     <div class="col-md-4">
-        {{makeupId}}
+        <p>ID: {{_id}} </p>
 
         <h1>{{top3}}{{collectionName}}</h1>
         <h2> Collection Name: {{name}} <small> </small></h2>
@@ -55,9 +63,9 @@
         <div class="btn-group" style="width: 100%">
 
             {{!-- <a href="/collection/create/edit/{{_id}}" class=" btn btn-dark btn-sm">Edit</a> --}}
-            <a href="/create/{{_id}}/edit" class=" btn btn-dark btn-sm">Edit</a>
+            <a href="/edit/{{_id}}">Edit</a>
 
-            <form action="/create/{{_id}}/delete" method="POST">
+            <form action="/create/delete/{{_id}}" method="POST">
                 <button>🗑 DELETE</button>
             </form>
         </div>
@@ -70,7 +78,6 @@
     </div>
 
     {{/each}}
-
 
 
 
