--- a/views/pages/edit.hbs
+++ b/views/pages/edit.hbs
@@ -1,17 +1,22 @@
 <h2>Update a Collection</h2>
 
 
-<form action="/create/{{post._id}}/edit" method="POST">
+<form action="/edit/{{cop._id}}" method="POST">
+    <input naem="_id" value="{{cop._id}}">
     <label>
         Name:
-        <input type="text" name="title" value="{{post.name}}">
+        <input type="text" name="name" value="{{cop.name}}">
     </label>
     <br>
 
-
+    <label>
+        Brand:
+        <input type="text" name="brand" value="{{cop.brand}}">
+    </label>
+    <br>
     <label>
         Description:
-        <textarea name="description" cols="30" rows="5"> {{post.description }} </textarea>
+        <textarea name="description" cols="30" rows="5"> {{cop.description }} </textarea>
     </label>
     <br>
 
