--- a/views/pages/create.hbs
+++ b/views/pages/create.hbs
@@ -63,10 +63,10 @@
         <div class="btn-group" style="width: 100%">
 
             {{!-- <a href="/collection/create/edit/{{_id}}" class=" btn btn-dark btn-sm">Edit</a> --}}
-            <a href="/collection/edit/{{_id}}">Edit</a>
+            <a href="/collection/create/edit/{{_id}}">Edit</a>
 
-            <form action="/create/delete/{{_id}}" method="POST">
-                <button>🗑 DELETE</button>
+            {{!-- <form action="/create/delete/{{_id}}" method="POST"> --}}
+                {{!-- <button>🗑 DELETE</button> --}}
             </form>
         </div>
 
