--- a/views/pages/create.hbs
+++ b/views/pages/create.hbs
@@ -65,8 +65,8 @@
             {{!-- <a href="/collection/create/edit/{{_id}}" class=" btn btn-dark btn-sm">Edit</a> --}}
             <a href="/collection/create/edit/{{_id}}">Edit</a>
 
-            {{!-- <form action="/create/delete/{{_id}}" method="POST"> --}}
-                {{!-- <button>🗑 DELETE</button> --}}
+            <form action="/collection/create/delete/{{_id}}" method="POST">
+                <button>🗑 DELETE</button>
             </form>
         </div>
 
