--- a/views/pages/edit.hbs
+++ b/views/pages/edit.hbs
@@ -28,6 +28,6 @@
 
 
 
-    <form action="/create/delete/{{_id}}" method="POST">
-        <button>🗑 DELETE</button>
+    {{!-- <form action="/create/delete/{{_id}}" method="POST">
+        <button>🗑 DELETE</button> --}}
     </form>
